src/objects/Work_Request__c.object
<CustomObject>
    <description>Work requests are a way to manage new project requests, change orders, and other types of IT service requests that are &quot;over&quot; a couple days of effort.  If the effort is more of a &quot;IT help desk&quot; request, we suggest you use Salesforce.com Cases object.  Often, organizations will use this object for the business analyst and use a workflow approval process to have the project management office approve/reject the work request based on the cost/benefit analysis.  Work requests can and should be associated to the appropriate program for reporting purposes.</description>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware Dev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Dev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tableau / Big Query</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <inlineHelpText>This is the date that the work request is either approved or rejected.</inlineHelpText>
        <label>Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IT User the Work Request is assigned to</description>
        <inlineHelpText>IT User the Work Request is assigned to</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associated_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project that the Work Request is associated with.</description>
        <label>Associated Project</label>
        <referenceTo>PPM_Project__c</referenceTo>
        <relationshipLabel>Work Requests</relationshipLabel>
        <relationshipName>Work_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Impact__c</fullName>
        <description>If completed, the level of impact or value this work request would deliver to the business.  This field paired with the IT Effort helps determine the prioritization of the project.</description>
        <inlineHelpText>If completed, the level of impact or value this work request would deliver to the business.</inlineHelpText>
        <label>Business Impact</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Sponsor__c</fullName>
        <label>Business Sponsor</label>
        <picklist>
            <picklistValues>
                <fullName>Business Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement (Direct)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <inlineHelpText>Please enter the date at which the business unit requires a budget go/no-go decision.</inlineHelpText>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost_Budget__c</fullName>
        <label>Estimated Cost Budget</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours_Budget__c</fullName>
        <label>Estimated Hours Budget</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N80000002yDuiEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Cost_Savings__c</fullName>
        <label>Expected Cost Savings</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Revenue_Increase__c</fullName>
        <label>Expected Revenue Increase</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Satisfaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grow Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Run Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transformation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IT_Ready_Target_Date__c</fullName>
        <description>Date for which IT expects to have work ready for UAT.</description>
        <inlineHelpText>Date for which IT expects to have work ready for UAT.</inlineHelpText>
        <label>IT Ready Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IT_Status__c</fullName>
        <label>IT Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyzing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Deploy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unplanned Future Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Include_in_Status_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to select a Work Request to include in a Status Report</description>
        <inlineHelpText>Checkbox to select a Work Request to include in a Status Report</inlineHelpText>
        <label>Include in Status Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Known_Assumptions__c</fullName>
        <inlineHelpText>What is the current state/situation?   Please list all that is known and unknown about the proposed solution.</inlineHelpText>
        <label>Assumptions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Latest_Status__c</fullName>
        <description>Latest status of the Work Request.</description>
        <inlineHelpText>Provide a short description (up to 255 characters) of the latest status of the Work Request</inlineHelpText>
        <label>Latest Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Portfolio</label>
        <referenceTo>Portfolio__c</referenceTo>
        <relationshipLabel>Work Requests</relationshipLabel>
        <relationshipName>R00N80000002yGvHEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Problem_Description__c</fullName>
        <inlineHelpText>Please describe the business problem you are trying to solve.</inlineHelpText>
        <label>Problem Statement</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proposed_Solution__c</fullName>
        <inlineHelpText>Please describe your desired solution to the problem statement.</inlineHelpText>
        <label>Proposed Solution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Regions__c</fullName>
        <label>Regions</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAS</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Request_Priority__c</fullName>
        <label>Request Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Status_Date__c</fullName>
        <description>Date when Work Request Status occurred</description>
        <inlineHelpText>Date when Work Request Status occurred</inlineHelpText>
        <label>Request Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N80000002yE2hEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource_Need__c</fullName>
        <description>If pursued, the amount of resources (people, time, &amp; money) needed to complete this work request.  This paired with Business Impact helps determine the priority of the work request.</description>
        <inlineHelpText>If pursued, the amount of resources (people, time, &amp; money) needed to complete this work request.</inlineHelpText>
        <label>Resource Impact</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risks__c</fullName>
        <inlineHelpText>What is the associated concerns or risks?  What happens if no action is taken?</inlineHelpText>
        <label>Risks</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>144</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint_Release__c</fullName>
        <label>Sprint Release</label>
        <picklist>
            <picklistValues>
                <fullName>Backlog</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2015.08.a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015.07.c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015.07.b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015.07.a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015.06.b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015.06.a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015.01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_History__c</fullName>
        <description>Retains the entries of the Latest Status field.</description>
        <inlineHelpText>Retains the entries of the Latest Status field.</inlineHelpText>
        <label>Status History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Target_Release_Date__c</fullName>
        <description>Date that the work is planned to be released on.</description>
        <inlineHelpText>Date that the work is planned to be released on.</inlineHelpText>
        <label>Target Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VHD_Ticket__c</fullName>
        <label>VHD Ticket #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Request_Status__c</fullName>
        <label>Work Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unplanned Future Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Request_Type__c</fullName>
        <inlineHelpText>Please note that a work request is not a trouble ticket.  Work requests are submitted to the project management office for strategic improvements for business units.</inlineHelpText>
        <label>Work Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Enhancement Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Defect / Incident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Account &amp; Permissions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Work Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>VHD_Ticket__c</columns>
        <columns>Work_Request_Status__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Associated_Project__c</columns>
        <columns>Business_Sponsor__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Completed_Date__c</columns>
        <columns>Work_Request_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Completed_Work_Requests</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Work_Request_Type__c</columns>
        <columns>Request_Priority__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>Portfolio__c</columns>
        <columns>VHD_Ticket__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Work_Request_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>All Completed Work Requests</label>
    </listViews>
    <listViews>
        <fullName>All_Go_To_Market</fullName>
        <columns>NAME</columns>
        <columns>VHD_Ticket__c</columns>
        <columns>Work_Request_Status__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Associated_Project__c</columns>
        <columns>Business_Sponsor__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Completed_Date__c</columns>
        <columns>Work_Request_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application__c</field>
            <operation>equals</operation>
            <value>,Go To Market,Tableau / Big Query</value>
        </filters>
        <label>All Go To Market</label>
    </listViews>
    <listViews>
        <fullName>GTM_Deal_Project_Queue_Open</fullName>
        <columns>NAME</columns>
        <columns>VHD_Ticket__c</columns>
        <columns>Application__c</columns>
        <columns>Request_Priority__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Work_Request_Status__c</columns>
        <columns>IT_Status__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Portfolio__c</columns>
        <columns>IT_Ready_Target_Date__c</columns>
        <columns>Target_Release_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Work_Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Rejected</value>
        </filters>
        <filters>
            <field>Application__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Associated_Project__c</field>
            <operation>equals</operation>
            <value>Deal Management</value>
        </filters>
        <label>GTM: Deal Project Queue - Open</label>
    </listViews>
    <listViews>
        <fullName>GTM_Enhancements_Queue_Open</fullName>
        <columns>NAME</columns>
        <columns>VHD_Ticket__c</columns>
        <columns>Application__c</columns>
        <columns>Sprint_Release__c</columns>
        <columns>Request_Priority__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Work_Request_Status__c</columns>
        <columns>IT_Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Portfolio__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Work_Request_Type__c</field>
            <operation>equals</operation>
            <value>,Enhancement Request</value>
        </filters>
        <filters>
            <field>Work_Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Rejected</value>
        </filters>
        <filters>
            <field>Work_Request_Type__c</field>
            <operation>notEqual</operation>
            <value>Production Defect / Incident,User Account &amp; Permissions</value>
        </filters>
        <filters>
            <field>Application__c</field>
            <operation>equals</operation>
            <value>Go To Market,Tableau / Big Query,Sales</value>
        </filters>
        <label>GTM: Enhancements Queue - Open</label>
    </listViews>
    <listViews>
        <fullName>GTM_Enhancements_Recently_Completed</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Request_Priority__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>Portfolio__c</columns>
        <columns>VHD_Ticket__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Work_Request_Type__c</field>
            <operation>equals</operation>
            <value>Enhancement Request</value>
        </filters>
        <filters>
            <field>Work_Request_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Work_Request_Type__c</field>
            <operation>notEqual</operation>
            <value>Production Defect / Incident,User Account &amp; Permissions</value>
        </filters>
        <filters>
            <field>Application__c</field>
            <operation>equals</operation>
            <value>Go To Market,Tableau / Big Query,Marketing,Sales</value>
        </filters>
        <label>GTM: Enhancements Recently Completed</label>
    </listViews>
    <listViews>
        <fullName>Production_Incidents_Open</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Request_Priority__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Work_Request_Status__c</columns>
        <columns>IT_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>VHD_Ticket__c</columns>
        <columns>Created_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Work_Request_Type__c</field>
            <operation>equals</operation>
            <value>Production Defect / Incident</value>
        </filters>
        <filters>
            <field>Work_Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Rejected</value>
        </filters>
        <label>Production Incidents - Open</label>
    </listViews>
    <listViews>
        <fullName>User_Account_Permissions_Requests</fullName>
        <columns>NAME</columns>
        <columns>Request_Priority__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Work_Request_Status__c</columns>
        <columns>IT_Status__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Portfolio__c</columns>
        <columns>VHD_Ticket__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Work_Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Rejected</value>
        </filters>
        <filters>
            <field>Work_Request_Type__c</field>
            <operation>equals</operation>
            <value>User Account &amp; Permissions</value>
        </filters>
        <label>User Account &amp; Permissions Requests</label>
    </listViews>
    <listViews>
        <fullName>Work_Request_Type_Undetermined</fullName>
        <columns>NAME</columns>
        <columns>VHD_Ticket__c</columns>
        <columns>Work_Request_Status__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Associated_Project__c</columns>
        <columns>Business_Sponsor__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Work_Request_Type__c</field>
            <operation>equals</operation>
        </filters>
        <label>Work Request Type Undetermined</label>
    </listViews>
    <listViews>
        <fullName>Work_Requests_Submitted</fullName>
        <columns>NAME</columns>
        <columns>Request_Priority__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Work_Request_Status__c</columns>
        <columns>IT_Status__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Portfolio__c</columns>
        <columns>VHD_Ticket__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Work_Request_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>Work Requests - Submitted</label>
    </listViews>
    <nameField>
        <displayFormat>WR-{MM}{DD}{YY}-{000}</displayFormat>
        <label>Work Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Requests</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>